# QTlab4

./: CMakeLists.txt  idatabase.cpp  idatabase.h  imgs.qrc  loginview.cpp  loginview.h  loginview.ui  main.cpp  masterview.cpp  masterview.h  masterview.ui  patienteditview.cpp  patienteditview.h  patienteditview.ui  patientview.cpp  patientview.h  patientview.ui  welcomeview.cpp  welcomeview.h  welcomeview.ui
